# laba-5d

./: CMakeLists.txt  main.c
libs/algorithms/: algorithm.c  algorithm.h
libs/algorithms/array/: array.h
libs/data_structures/: CMakeLists.txt  matrix.c  matrix.h
libs/data_structures/bitset/: bitset.h
